# mnist_nn

./: CMakeLists.txt  layer_outputs.ipynb  scratch.ipynb
.ipynb_checkpoints/: scratch-checkpoint.ipynb
data/: dense_1_biases.npy  dense_1_weights.npy  dense_biases.npy  dense_weights.npy  image_65.npy  random_array.npy  random_input.npy  random_input_mat.npy
include/.ipynb_checkpoints/: mnist_loader-checkpoint.cc
src/.ipynb_checkpoints/: mmultiply-Copy1-checkpoint.cpp  mmultiply-checkpoint.cpp  mmultiply__old-checkpoint.cpp  mmultiply_test-checkpoint.cpp
